data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4617.wast
;; 6. **Test Description**: Apply `br_table` with a non-function element in the table, such as a null reference, to check for proper handling of invalid table entries. This test ensures failure detection when invalid table entries are accessed.    - **Constraint**: Include a null reference or non-function reference in the table being indexed.    - **Edge Case Relation**: Validates how implementations handle invalid references within function tables.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 2 funcref (elem (ref.null func) (ref.null func)))
    (func $invalid-entry
      (call_indirect (type 0) (i32.const 0))
      (i32.const 0)
    )
  )
  "table index out of bounds or null reference"
)